[gd_scene load_steps=2 format=2]

[ext_resource path="res://examples/lobby.gd" type="Script" id=1]

[node name="SteamLobby" type="Node2D"]
script = ExtResource( 1 )

[node name="ConnectedGUI" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatWindow" type="ItemList" parent="ConnectedGUI"]
margin_left = 41.0
margin_top = 391.0
margin_right = 398.0
margin_bottom = 535.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatLineEdit" type="LineEdit" parent="ConnectedGUI"]
margin_left = 41.0
margin_top = 544.0
margin_right = 317.0
margin_bottom = 577.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatSendBtn" type="Button" parent="ConnectedGUI"]
margin_left = 328.0
margin_top = 546.0
margin_right = 398.0
margin_bottom = 577.0
text = "Send"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateLobbyBtn" type="Button" parent="."]
margin_left = 44.0
margin_top = 41.0
margin_right = 159.0
margin_bottom = 87.0
text = "Create Lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InviteFriendBtn" type="Button" parent="."]
margin_left = 45.0
margin_top = 108.0
margin_right = 160.0
margin_bottom = 154.0
text = "Invite Friend"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="."]
margin_left = 199.0
margin_top = 39.0
margin_right = 482.0
margin_bottom = 159.0
__meta__ = {
"_edit_use_anchors_": false
}
